--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <modules>
         <module>puzzler-core</module>
         <module>puzzler-web</module>
+        <module>puzzler-app</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
