--- a/puzzler-web/pom.xml
+++ b/puzzler-web/pom.xml
@@ -77,5 +77,11 @@
             <artifactId>jersey-hk2</artifactId>
             <version>2.26</version>
         </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>5.3.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
