--- a/puzzler-web/pom.xml
+++ b/puzzler-web/pom.xml
@@ -78,6 +78,11 @@
             <version>2.26</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>5.3.1-SNAPSHOT</version>
