--- a/puzzler-web/pom.xml
+++ b/puzzler-web/pom.xml
@@ -83,6 +83,11 @@
             <version>2.6</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>5.3.0</version>
