--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,15 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <tags>
+                                <tag>
+                                    <name>todo</name>
+                                    <placement>a</placement>
+                                    <head>To Do:</head>
+                                </tag>
+                            </tags>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
