--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <groupId>com.github.skapral.puzzler</groupId>
     <artifactId>puzzler</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <modules>
         <module>puzzler-core</module>
         <module>puzzler-web</module>
