--- a/puzzler-app/pom.xml
+++ b/puzzler-app/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <artifactId>puzzler</artifactId>
         <groupId>com.github.skapral.puzzler</groupId>
-        <version>0.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
