--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>oo</groupId>
-        <artifactId>atom-starter</artifactId>
-        <version>0.0.12</version>
-    </parent>
-
     <groupId>com.github.skapral.puzzler</groupId>
     <artifactId>puzzler</artifactId>
     <packaging>pom</packaging>
@@ -93,6 +86,50 @@
         </repository>
     </repositories>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.pragmaticobjects.oo.tests</groupId>
+                <artifactId>tests-junit5</artifactId>
+                <version>0.0.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.pragmaticobjects.oo.atom</groupId>
+                <artifactId>atom-maven-plugin</artifactId>
+                <version>0.0.13</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-annotations</goal>
+                            <goal>instrument</goal>
+                            <goal>instrument-tests</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <trimStackTrace>false</trimStackTrace>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.2.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
             <id>coverage</id>
@@ -145,6 +182,9 @@
                         <executions>
                             <execution>
                                 <configuration>
+                                    <sourceDirectories>
+                                        <sourceDirectory>src/main/java</sourceDirectory>
+                                    </sourceDirectories>
                                     <logViolationsToConsole>true</logViolationsToConsole>
                                     <configLocation>checkstyle.xml</configLocation>
                                     <encoding>UTF-8</encoding>
