--- a/puzzler-web/pom.xml
+++ b/puzzler-web/pom.xml
@@ -88,6 +88,11 @@
             <version>1.11</version>
         </dependency>
         <dependency>
+            <groupId>com.pragmaticobjects.oo.tests</groupId>
+            <artifactId>tests-junit5</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>5.3.0</version>
