--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ install:
 build_script:
   - mvn clean package -B -Dmaven.test.skip=true
 test_script:
-  - mvn clean install -Pextras --errors --batch-mode
+  - mvn clean install -Pextras,coverage,checkstyle --errors --batch-mode
 cache:
   - C:\maven\
   - C:\Users\appveyor\.m2
