--- a/puzzler-core/pom.xml
+++ b/puzzler-core/pom.xml
@@ -52,6 +52,12 @@
             <version>3.8.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>5.3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
