--- a/puzzler-core/pom.xml
+++ b/puzzler-core/pom.xml
@@ -58,6 +58,12 @@
             <version>5.3.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
