--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>puzzler-web</module>
         <module>puzzler-app</module>
         <module>puzzler-github</module>
+        <module>puzzler-gitlab</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
