#3: Applied checkstyle for tests code

--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,7 @@
                                 <configuration>
                                     <sourceDirectories>
                                         <sourceDirectory>src/main/java</sourceDirectory>
+                                        <sourceDirectory>src/test/java</sourceDirectory>
                                     </sourceDirectories>
                                     <logViolationsToConsole>true</logViolationsToConsole>
                                     <configLocation>checkstyle.xml</configLocation>
