--- a/puzzler-gitlab/pom.xml
+++ b/puzzler-gitlab/pom.xml
@@ -69,5 +69,9 @@
             <artifactId>mockserver-netty</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.skapral.config</groupId>
+            <artifactId>config-properties</artifactId>
+        </dependency>
     </dependencies>
 </project>
